# datacollapse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ci.yml  cli.py  generate_demo_images.py  pyproject.toml  test_smoke.py
.github/workflows/: ci.yml
examples/: build_readme_images.py  build_readme_images_from_real.py  minimal_collapse.py  run_example.py  sample_data.csv
real_data_test/: ANALYSIS_SUMMARY.md  CORRECTED_NO_FSE_REPORT.md  CRITICAL_FINDING.md  DATA_COLLAPSE_REPORT.md  DATA_COLLAPSE_REPORT_CORRECTED.md  DATA_COLLAPSE_REPORT_WITH_8_57.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_NO_FSE_ANALYSIS.md  FINAL_SYNTHESIS_REPORT.md  INITIAL_SENSITIVITY_AND_WIDE_SCAN_REPORT.md  NO_FSE_INCONSISTENCY_ANALYSIS.md  NO_FSE_VS_FSE_COMPARISON_REPORT.md  RESULTS_TABLE.md  RESULTS_TABLE_CORRECTED.md  RESULTS_TABLE_WITH_8_57.md  TODO.md  analyze_equivalence_bands.py  compare_fse_optimizers.csv  compare_fse_optimizers.py  compare_fse_vs_no_fse.py  complete_fse_analysis.py  comprehensive_initial_value_analysis.py  corrected_no_fse_analysis.py  crossing_uc_estimate.py  debug_no_fse.py  debug_nu_inverse_problem.py  equivalence_summary.csv  explore_parameters.py  export_three_core_plots.py  final_summary.py  focused_nofse_vs_fse_analysis.py  generalized_bootstrap_fse.py  generalized_bootstrap_fse_allL.csv  generalized_bootstrap_nofse.py  generalized_bootstrap_nofse_dropL7.csv  generate_beautiful_collapse_plots.py  generate_report_data.py  generate_report_data_simple.py  generate_report_data_with_8_57.py  initial_sensitivity_analysis.py  (+22 more)
real_data_test/Data_scale/L11/R/: R11
real_data_test/Data_scale/L7/R/: R01  R10
real_data_test/Data_scale/L9/R/: R01  R11
real_data_test/collab_package/: README.md  make_collapse.py  real_data_combined.csv
real_data_test/collab_package/Data_scale/L11/R/: R01  R10
real_data_test/collab_package/Data_scale/L13/R/: R01  R10  R11
real_data_test/collab_package/Data_scale/L7/R/: R11
real_data_test/collab_package/Data_scale/L9/R/: R10
real_data_test/mcp/: server.py
src/datacollapse/: README.md  __init__.py  __main__.py  datacollapse.py
tests/: test_datacollapse_basic.py
